--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -60,8 +60,8 @@
         <div class="kr-sg-input-text">          
           <input id="scheduleMn" type="number" min="0" max="59" class="input-text timeMM" placeholder="MM" name = "timeMM" [(ngModel)] = "timeMM" (ngModelChange)="modelChangeFn($event,'MM')" [disabled] ="!scheduleFlag"> 
         </div>
-        <div id="schedule-AM" class="schedule-AM" [ngClass] = "{'active' : meridiem == 'AM'}" (click)="changeMeridiem('AM')" >AM</div>
-        <div id="schedule-PM"  class="schedule-PM" [ngClass] = "{'active' : meridiem == 'PM'}" (click)="changeMeridiem('PM')" >PM</div>
+        <div id="schedule-AM" class="schedule-AM" [ngClass] = "{'active' : meridiem == 'AM' && scheduleFlag}" (click)="changeMeridiem('AM')" >AM</div>
+        <div id="schedule-PM"  class="schedule-PM" [ngClass] = "{'active' : meridiem == 'PM' && scheduleFlag}" (click)="changeMeridiem('PM')" >PM</div>
         <div class="kr-sg-dropdowns schedule-timZon">
           <div class="dropdown dropdown-open">
               <button class="dropdown-toggle dropdown-input" data-toggle="dropdown" [disabled] ="!scheduleFlag"><span [ngClass] = "{'schedule-drop-text' : stz == 'Time Zone'}" >{{stz}}</span></button>                                            
