--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -4,7 +4,7 @@
         <span class="please-wait-message">{{'please_wait'| translate}}</span>
     </div>
     <div *ngIf="!loadingContent">
-    <div class="header">{{'facets.facets'| translate}}</div>
+    <div class="header-sec">{{'facets.facets'| translate}}</div>
     <div class="search-input-block">
         <div class="kr-sg-input-search">                               
             <input type="text" placeholder="Search" class="input-search pl-4" [(ngModel)]="searchfacet">
