--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -38,6 +38,9 @@
         padding: 30px;
         .kr-sg-input-search{
             width: 252px;
+            input{
+                padding: 4px 10px 4px 35px !important;
+            }
         }
         .actions{            
             button{
