--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -160,6 +160,7 @@
             line-height: 14px;
             text-transform: capitalize;
             color: #9AA0A6;
+            word-break: break-word;
         }                    
     }
     .table_body{
