--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -27,8 +27,8 @@
                 <div class="col-3 title">
                     <span class="">{{data.lastModifiedBy.firstName + ' ' + data.lastModifiedBy.lastName}}</span>
                     <span class="float-right action-links">
-                        <span class="actions-links mr-3" ngbTooltip='Edit' [container]='"body"' (click)="editnewCredential(event)"><img class="action_icon" src="assets/images/edit-pencil.svg"></span>
-                        <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential()"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
+                        <!-- <span class="actions-links mr-3" ngbTooltip='Edit' [container]='"body"' (click)="editnewCredential(event,data)"><img class="action_icon" src="assets/images/edit-pencil.svg"></span> -->
+                        <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential(data)"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
                     </span>
                 </div>
             </div>
@@ -96,11 +96,11 @@
                     class="input-text">
             </div>
             <div class="kr-sg-checkbox d-block p-0">
-                <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
+                <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.anonymus">
                 <label for="checkbox_1" class="checkbox-custom-label">Allow anonymous users to chat with bot</label>
             </div>
             <div class="kr-sg-checkbox d-block p-0">
-                <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
+                <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
             <hr class="mt-4 mb-4">
@@ -109,7 +109,7 @@
             <div class="kr-sg-dropdowns">
                 <div class="dropdown dropdown-open">
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder">
-                            {{credntial.awt}}</span> </button>
+                            {{editCreden.awt}}</span> </button>
                     <ul class="dropdown-menu content-menu">
                         <li (click)="jwtAuth('RS256')"><a>RS256</a></li>
                         <li (click)="jwtAuth('HS256')"><a>HS256</a></li>
@@ -118,7 +118,7 @@
             </div>
             <div class="switch-toggle mt-4">                
                 <label class="kr-sg-toggle">
-                    <input type="checkbox" [(ngModel)]="credntial.enabled">
+                    <input type="checkbox" [(ngModel)]="editCreden.enabled">
                     <div class="slider"><span class="enabled">Push Notifications Enabled</span><span class="disabled">Push Notifications Enabled</span></div>
                 </label>
             </div>
@@ -127,7 +127,7 @@
         </div>
         <!-- </perfect-scrollbar> -->
         <div class="modal-footer">
-            <button class="kr-sg-button-primary btn_lg"(click)="createCredential()" >Save</button>
+            <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()" >Save</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeEditModalPopup()">Cancel</button>
         </div>
     </kr-modal> 
