--- a/findly-builder/src/app/components/settings/settings.component.scss
+++ b/findly-builder/src/app/components/settings/settings.component.scss
@@ -194,7 +194,7 @@
                     line-height: 12px;
                     text-transform: uppercase;
                     padding: 2px 6px;
-                    position: absolute;
+                    position: inherit;
                     bottom: 35px;
                 }
             }
