--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -869,6 +869,15 @@
                 margin-left: 66%;
                 color: #423F3F;
             }
+            .log-header{
+                font-weight: 600;
+                font-size: 12px;
+                color: #979797; 
+            }
+            .log-desc{
+                font-size: 10px;
+                color: #9B9B9B; 
+            }
         }
         
     }
